--- a/templates/editor.html
+++ b/templates/editor.html
@@ -17,7 +17,7 @@
                 <br>
                 <span contenteditable class="pr-desc">{{ project.description }}</span>
                 <br>
-                <span> Made by: </span><span>{{ author.name }}</span>
+                <span class="pr-auth-lbl"> Made by: </span><span class="pr-auth"><b>{{ author.name }}</b></span>
                 <hr>
                 <h3>Change textures used:</h3>
                 <div class="texture-upload-c">
