--- a/src/templates/node-creator.html
+++ b/src/templates/node-creator.html
@@ -20,13 +20,11 @@
     </div>
 
     <meta id="node-data" data-node-id="{{ node.id }}" data-node-code="{{ node.json_code }}">
-    <script src="/static/node-create/js/utils.js"></script>
-    <script src="/static/editor/js/base/nodes.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.2/ace.js" type="text/javascript"></script>
     <script src="https://raw.githack.com/BobHuNanjing/myeditor/master/ace/mode/mode-lpmln" type="text/javascript"
             charset="utf-8"></script>
 
-    <script src="/static/node-create/js/main.js"></script>
-    <script src="/static/node-create/js/preview.js"></script>
-    <script src="/static/node-create/js/save.js"></script>
+    {% assets "node_create_js"%}
+        <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+    {% endassets %}
 {% endblock %}
