--- a/src/static/login/login.css
+++ b/src/static/login/login.css
@@ -30,9 +30,9 @@ form {
 }
 
 .form-control {
-    background-color: #181818;
+  background-color: #181818;
 }
 
 label {
-  color: #dddddd;
+  color: #ddd;
 }
