--- a/src/static/projects/css/projects.css
+++ b/src/static/projects/css/projects.css
@@ -15,20 +15,22 @@
   grid-template-columns: 250px 1fr;
   border-radius: 10px;
   border: 1px solid #404040;
-  background-color: #222222;
+  background-color: #222;
   box-shadow: 0 0 20px rgb(0 0 0 / 5%);
-  transition: background-color ease-in-out 60ms,
-  box-shadow ease-in-out 60ms,
-  border ease-in-out 60ms;
+  transition:
+    background-color ease-in-out 60ms,
+    box-shadow ease-in-out 60ms,
+    border ease-in-out 60ms;
 }
 
 .project:hover {
   background-color: #252525;
   border: 1px solid #ff7133;
   box-shadow: 0 0 5px #ff70338e;
-  transition: background-color ease-in-out 60ms,
-  box-shadow ease-in-out 60ms,
-  border ease-in-out 60ms;
+  transition:
+    background-color ease-in-out 60ms,
+    box-shadow ease-in-out 60ms,
+    border ease-in-out 60ms;
 }
 
 .project-data {
