--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -31,7 +31,17 @@
                 <p>
                     {{ login_form.submit(type="submit", class="btn btn-primary") }}
                 </p>
-                <div>{{ login_message }}</div>
+                <div class="errors">
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category, message in messages %}
+                            {% if category == "Login" %}
+                                <div class="alert alert-danger" role="alert">{{ message }}</div>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+                </div>
             </form>
         </div>
         <div>
@@ -79,7 +89,17 @@
                 <p>
                     {{ register_form.submit(type="submit", class="btn btn-primary") }}
                 </p>
-                {{ register_message }}
+                <div class="errors">
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            {% for category, message in messages %}
+                                {% if category == "Register" %}
+                                    <class="alert alert-danger" role="alert">{{ message }}</div>
+                                {% endif %}
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
+                </div>
             </form>
         </div>
     </div>
