--- a/src/templates/editor.html
+++ b/src/templates/editor.html
@@ -57,7 +57,7 @@
     </div>
 
     <div id="context-menu">
-        <div class="item" id="new-node-btn">Place New node</div>
+        <div class="item --green" id="new-node-btn">Place New node</div>
         <div id="node-list-div"></div>
     </div>
 
